package src;

public class Seller extends User {

    public Seller(String id, String username) {
    }

    @Override
    public void displayProfile() {
    }

}