@startuml
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam dpi 300
scale 1.5

' ==========================================
' 1. MÔ HÌNH NGƯỜI DÙNG (USER ENTITIES)
' ==========================================
package "Entity - User" {
    abstract class User {
        # id: String
        # username: String
        # role: String
        # balance: double
        + getBalance(): double
        + setBalance(balance: double): void
    }

    class Bidder extends User {
        + placeBid(item: Item, amount: double): boolean
    }

    class Seller extends User {
        - myItems: List<Item>
        + addItem(item: Item): void
        + getMyItems(): List<Item>
    }

    class Admin extends User {
        + banUser(userId: String): void
        + cancelAuction(itemId: String): void
    }
}

' ==========================================
' 2. MÔ HÌNH SẢN PHẨM & FACTORY (ITEM ENTITIES)
' ==========================================
package "Entity - Item" {
    enum AuctionStatus {
        PENDING, OPEN, RUNNING, FINISHED, PAID, CANCELED
    }

    abstract class Item {
        # itemId: String
        # name: String
        # startingPrice: double
        # currentHighestBid: double
        # startTime: LocalDateTime
        # endTime: LocalDateTime
        # status: AuctionStatus
        + updateHighestBid(amount: double, bidderId: String): boolean
        + getRemainingTime(): long
    }

    class Electronics extends Item {
        - warrantyMonths: int
    }
    class Art extends Item {
        - artistName: String
    }
    class Vehicle extends Item {
        - mileage: int
    }
    
    class ItemFactory {
        + {static} createItem(type: String, params: Object...): Item
    }
    
    Item *-- AuctionStatus
    ItemFactory ..> Item : "Tạo đối tượng"
}

' ==========================================
' 3. HỆ THỐNG XỬ LÝ LÕI (CORE SERVICES)
' ==========================================
package "Business Logic (Services)" {
    class AuctionManager {
        - activeAuctions: Map<String, Item>
        + placeBid(itemId: String, bidderId: String, amount: double): boolean
    }

    class BiddingService {
        + placeBid(itemId: String, bidderId: String, amount: double): boolean
        - validateAndExecuteBid(item: Item, amount: double): void
    }

    class AutoBidder {
        - configs: Map<String, List<AutoConfig>>
        + register(bidderId: String, itemId: String, maxBid: double): void
        + onNewBid(itemId: String, currentPrice: double): void
    }

    class AntiSniping {
        + checkAndExtend(itemId: String): int
    }

    class AuctionScheduler {
        - scheduler: ScheduledExecutorService
        + checkAuctions(): void
    }

    class NotificationService {
        - observers: List<BidObserver>
        + notifyObservers(itemId: String, price: double, bidderId: String): void
    }
}

' ==========================================
' MỐI QUAN HỆ CHẶT CHẼ (RELATIONSHIPS)
' ==========================================

' Người dùng và Sản phẩm
Bidder "1" --> "*" Item : "Đặt giá >"
Seller "1" --> "*" Item : "Đăng bán >"

' Các lớp xử lý (Services)
AuctionManager *-- BiddingService : "Chứa"
AuctionManager *-- AutoBidder : "Chứa"
AuctionManager *-- AntiSniping : "Chứa"
AuctionManager *-- AuctionScheduler : "Chứa"
AuctionManager *-- NotificationService : "Chứa"

BiddingService ..> Item : "Kiểm tra & Cập nhật giá"
BiddingService ..> AutoBidder : "Kích hoạt vòng lặp Auto-Bid"
BiddingService ..> NotificationService : "Gửi thông báo UI"

AutoBidder ..> AuctionManager : "Gọi ngược để tự động đặt giá"
AuctionScheduler ..> Item : "Kiểm tra hết giờ & Đóng phiên"

@enduml
